tests/compile-fail/ordered_bytes_single_requires_heapsize.stderr
error[E0277]: the trait bound `OrderedNoHeap: HeapSize` is not satisfied
  --> tests/compile-fail/ordered_bytes_single_requires_heapsize.rs:17:47
   |
17 | fn _instantiate() -> std::marker::PhantomData<OrderedBytesSingle<OrderedNoHeap>> {
   |                                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `HeapSize` is not implemented for `OrderedNoHeap`
  --> tests/compile-fail/ordered_bytes_single_requires_heapsize.rs:7:1
   |
 7 | struct OrderedNoHeap {
   | ^^^^^^^^^^^^^^^^^^^^
   = help: the following other types implement trait `HeapSize`:
             ()
             BamTemplateBatch
             BatchedMiGroups
             BatchedProcessedDedupGroups
             BatchedProcessedPositionGroups
             BatchedRawPositionGroups
             BgzfBlock
             DecodedRecordBatch
           and $N others
note: required by a bound in `OrderedBytesSingle`
  --> src/lib/pipeline/core/outputs.rs
   |
   | pub struct OrderedBytesSingle<T: Send + HeapSize + Ordered + 'static>(PhantomData<fn() -> T>);
   |                                         ^^^^^^^^ required by this bound in `OrderedBytesSingle`

error[E0277]: the trait bound `OrderedNoHeap: HeapSize` is not satisfied
  --> tests/compile-fail/ordered_bytes_single_requires_heapsize.rs:19:5
   |
19 |     std::marker::PhantomData
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `HeapSize` is not implemented for `OrderedNoHeap`
  --> tests/compile-fail/ordered_bytes_single_requires_heapsize.rs:7:1
   |
 7 | struct OrderedNoHeap {
   | ^^^^^^^^^^^^^^^^^^^^
   = help: the following other types implement trait `HeapSize`:
             ()
             BamTemplateBatch
             BatchedMiGroups
             BatchedProcessedDedupGroups
             BatchedProcessedPositionGroups
             BatchedRawPositionGroups
             BgzfBlock
             DecodedRecordBatch
           and $N others
note: required by a bound in `OrderedBytesSingle`
  --> src/lib/pipeline/core/outputs.rs
   |
   | pub struct OrderedBytesSingle<T: Send + HeapSize + Ordered + 'static>(PhantomData<fn() -> T>);
   |                                         ^^^^^^^^ required by this bound in `OrderedBytesSingle`
